--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
+                //生成需要的动态库 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
+                abiFilters "arm64-v8a"
                 cppFlags ""
             }
-            ndk {
-                abiFilters "x86"
-            }
+
         }
     }
     buildTypes {
@@ -25,7 +25,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    //使用3.6.0 能显示 cmakelist里面打印的日志
+    //使用3.6.0 能显示 cmakelist里面打印的日志  version "3.10.2"
     externalNativeBuild {
         cmake {
             path "src/main/cpp/CMakeLists.txt"
