测试调用java方法

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -5,7 +5,7 @@
 
 #指定cmake的最小版本
 cmake_minimum_required(VERSION 3.4.1)
-
+project(NdkTest)
 #设置生成的so文件路径
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../../jniLibs/${ANDROID_ABI})
 
@@ -21,6 +21,10 @@ message(${var})
 set(var 111)
 message(${var})
 include_directories(include)
+
+aux_source_directory(. SRC_LIST) # 搜索当前目录下的所有.cpp文件
+message(${SRC_LIST})
+
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
 # You can define multiple libraries, and CMake builds them for you.
@@ -51,7 +55,7 @@ add_library(
 # default, you only need to specify the name of the public NDK library
 # you want to add. CMake verifies that the library exists before
 # completing its build.
-
+#查找到指定的预编译库，并将它的路径存储在变量中。
 find_library( # Sets the name of the path variable.
         log-lib
 
@@ -66,6 +70,14 @@ find_library( # Sets the name of the path variable.
 target_link_libraries( # Specifies the target library.
         #这里链接的是生成的动态库的名称，不是.cpp文件的名称
         native-lib
+        people-lib
+        # Links the target library to the log library
+        # included in the NDK.
+        ${log-lib})
+
+#每个so库使用log的时候，都需要进行关联
+target_link_libraries( # Specifies the target library.
+        #这里链接的是生成的动态库的名称，不是.cpp文件的名称
         people-lib
         # Links the target library to the log library
         # included in the NDK.
