--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,10 +13,15 @@ android {
         externalNativeBuild {
             cmake {
                 //生成需要的动态库 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
-                abiFilters "arm64-v8a"
+                abiFilters 'arm64-v8a', 'armeabi-v7a'
                 cppFlags ""
             }
 
+        }
+        // 适配指定CPU架构
+        ndk {
+            //目前主流的cpu架构'arm64-v8a', 'armeabi-v7a' 
+            abiFilters 'arm64-v8a', 'armeabi-v7a'
         }
     }
     buildTypes {
@@ -41,4 +46,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'me.jessyan:autosize:1.2.1'
+
 }
